Ya tengo un desmadre xD

--- a/src/pages/index/BestPractices.astro
+++ b/src/pages/index/BestPractices.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="bestPractices">
+<div class="best-practices">
     <div class="paragraph">
         <h2>Hablemos de buenas prácticas</h2>
         <p>
@@ -21,13 +21,13 @@
         </ul>
         <p>Y más cosas que aprenda con el tiempo.</p>
     </div>
-    <div class="profilePicture">
+    <div class="profile-picture">
         <img src="./profile.jpg" alt="profile-picture" />
     </div>
 </div>
 
 <style>
-    .bestPractices {
+    .best-practices {
         display: flex;
         padding: var(--padding-content);
         background-color: var(--green);
@@ -47,7 +47,7 @@
             }
         }
 
-        & .profilePicture {
+        & .profile-picture {
             flex: 1;
 
             & img {
