--- a/src/pages/index/SmallPresentation.astro
+++ b/src/pages/index/SmallPresentation.astro
@@ -1,13 +1,13 @@
 ---
 ---
 
-<div class="smallPresentation">
+<div class="small-presentation">
   <h1 class="title">Fullstack Developer</h1>
   <p>Hola, soy Saúl Antonio y me encanta el desarrollo de software.</p>
 </div>
 
 <style>
-.smallPresentation {
+.small-presentation {
   display: flex;
   flex-direction: column;
   gap: 32px;
