--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,11 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
+import Layout from "../layouts/MainLayout/Layout.astro";
 import BestPractices from "./index/BestPractices.astro";
 import SmallPresentation from "./index/SmallPresentation.astro";
-
-
 ---
 
-<html lang="en">
-	<head>
-		<BaseHead title={"Extoy"} description={"Experimentando"} />
-	</head>
-	<body>
-		<SmallPresentation />
-		<BestPractices />
-	</body>
-</html>
+<Layout title="Inicio">
+	<SmallPresentation />
+	<BestPractices />
+</Layout>
