--- a/src/components/NavMenu.astro
+++ b/src/components/NavMenu.astro
@@ -21,3 +21,41 @@ import { Routes } from "../consts";
     </li>
   </ul>
 </nav>
+
+<style>
+  .nav-menu {
+    display: flex;
+    flex: 1;
+    justify-content: flex-end;
+
+    & ul {
+      display: flex;
+      gap: 32px;
+      list-style: none;
+
+      & a {
+        font-size: 20px;
+        color: inherit;
+        text-decoration: none;
+
+        :link,
+        :visited,
+        :hover,
+        :active,
+        :focus {
+          color: inherit;
+          text-decoration: none;
+        }
+
+        & div {
+          border-bottom: 1.5px solid transparent;
+          transition: border-color 0.2s ease;
+        }
+
+        & div:hover {
+          border-bottom-color: var(--main-text-color);
+        }
+      }
+    }
+  }
+</style>
