small presentation lista

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import '../styles/customElementsStyles.css';
 import type { ImageMetadata } from 'astro';
 
 interface Props {
