--- a/src/pages/index/SmallPresentation.astro
+++ b/src/pages/index/SmallPresentation.astro
@@ -1,9 +1,12 @@
 ---
+import { Routes } from "../../consts";
+
 ---
 
 <div class="small-presentation">
   <h1 class="title">Fullstack Developer</h1>
   <p>Hola, soy Saúl Antonio y me encanta el desarrollo de software.</p>
+  <a href={Routes.AboutMe} class="link-button">Sobre mí</a>
 </div>
 
 <style>
