--- a/src/pages/index/BestPractices.astro
+++ b/src/pages/index/BestPractices.astro
@@ -1,67 +1,73 @@
 ---
+import { Routes } from "../../consts";
+import ProfileImage from "../../assets/imgs/profile.jpg";
 
 ---
 
 <div class="best-practices">
-    <div class="paragraph">
-        <h2>Hablemos de buenas prácticas</h2>
-        <p>
-            Sin importar el área al que nos dediquemos siempre debemos cuidar
-            nuestró código, ya que con el podemos crear algo parecido a la magía
-            ya sea que algo salga totalmente bien o tan mal que funciona pero no
-            sabemos por qué, teinvito a pasar por mi blog donde te comparto
-            diferentes artículos sobre:
-        </p>
-        <ul>
-            <li>IA</li>
-            <li>Arquitectura limpia</li>
-            <li>Principios SOLID</li>
-            <li>Docker</li>
-            <li>JavaScript/TypeScript</li>
-        </ul>
-        <p>Y más cosas que aprenda con el tiempo.</p>
-    </div>
-    <div class="profile-picture">
-        <img src="./profile.jpg" alt="profile-picture" />
-    </div>
+  <div class="paragraph">
+    <h2>Hablemos de buenas prácticas</h2>
+    <p>
+      Sin importar el área al que nos dediquemos siempre debemos cuidar nuestró
+      código, ya que con el podemos crear algo parecido a la magía ya sea que
+      algo salga totalmente bien o tan mal que funciona pero no sabemos por qué,
+      teinvito a pasar por mi blog donde te comparto diferentes artículos sobre:
+    </p>
+    <ul>
+      <li>IA</li>
+      <li>Arquitectura limpia</li>
+      <li>Principios SOLID</li>
+      <li>Docker</li>
+      <li>JavaScript/TypeScript</li>
+    </ul>
+    <p>Y más cosas que aprenda con el tiempo.</p>
+    <a href={Routes.Blog} class="link-button">Blog</a>
+  </div>
+  <div class="profile-picture">
+    <img src={ProfileImage.src} alt="profile-picture" />
+  </div>
 </div>
 
 <style>
-    .best-practices {
-        display: flex;
-        padding: var(--padding-content);
-        background-color: var(--green);
+  .best-practices {
+    display: flex;
+    padding: var(--padding-content);
+    background-color: var(--green);
 
-        & .paragraph {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            gap: 16px;
+    & .paragraph {
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      gap: 16px;
 
-            > :first-child {
-                margin-top: 32px;
-            }
+      ul {
+        padding-left: 40px;
+      }
 
-            > :last-child {
-                margin-bottom: 32px;
-            }
-        }
+      > :first-child {
+        margin-top: 32px;
+      }
 
-        & .profile-picture {
-            flex: 1;
-
-            & img {
-                position: absolute;
-                top: 200px;
-                right: 10%;
-                bottom: 112px;
-                width: auto;
-                max-width: 280px;
-                height: auto;
-                max-height: 500px;
-                border-radius: 500px;
-                object-position: 50% 60%;
-            }
-        }
+      > :last-child {
+        margin-bottom: 32px;
+      }
     }
+
+    & .profile-picture {
+      flex: 1;
+
+      & img {
+        position: absolute;
+        top: 200px;
+        right: 10%;
+        bottom: 112px;
+        width: auto;
+        max-width: 280px;
+        height: auto;
+        max-height: 500px;
+        border-radius: 500px;
+        object-position: 50% 60%;
+      }
+    }
+  }
 </style>
