Se agrego a la versión que ya tenía

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
 import Layout from "../layouts/MainLayout/Layout.astro";
 import BestPractices from "./index/BestPractices.astro";
+import GetInTouch from "./index/GetInTouch.astro";
 import SmallPresentation from "./index/SmallPresentation.astro";
 ---
 
@@ -9,6 +9,7 @@ import SmallPresentation from "./index/SmallPresentation.astro";
 	<div class="home">
 		<SmallPresentation />
 		<BestPractices />
+		<GetInTouch />
 	</div>
 </Layout>
 <style>
