--- a/src/pages/index/GetInTouch.astro
+++ b/src/pages/index/GetInTouch.astro
@@ -1,4 +1,6 @@
 ---
+import { Routes } from "../../consts";
+
 
 ---
 
@@ -8,6 +10,7 @@
   </div>
   <div class="contact-with-customer">
     <p>Si tienes algún proyecto Web no dudes en contactarme.</p>
+    <a href={Routes.AboutMe} class="link-button">Envíame un correo</a>
   </div>
 </div>
 
