--- a/src/components/NavMenu.astro
+++ b/src/components/NavMenu.astro
@@ -24,10 +24,6 @@ import { Routes } from "../consts";
 
 <style>
   .nav-menu {
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-
     & ul {
       display: flex;
       gap: 32px;
@@ -53,7 +49,7 @@ import { Routes } from "../consts";
         }
 
         & div:hover {
-          border-bottom-color: var(--main-text-color);
+          border-bottom-color: inherit;
         }
       }
     }
