--- a/src/layouts/MainLayout/Components/Footer.astro
+++ b/src/layouts/MainLayout/Components/Footer.astro
@@ -5,3 +5,14 @@ import NavMenu from "../../../components/NavMenu.astro";
 <footer class="footer" role="contentinfo">
   <NavMenu />
 </footer>
+
+<style>
+  .footer {
+    display: flex;
+    align-items: center;
+    height: 80px;
+    padding: var(--padding-content);
+    background-color: var(--main-text-color);
+    color: var(--main-background-color);
+  }
+</style>
